Add eendpoints to add user to teams and projects
