# src/main/java/com/itechart/ema/api/TeamsApiController.java
@@ -1,9 +1,11 @@
 package com.itechart.ema.api;
 
 import com.itechart.ema.service.TeamService;
+import com.itechart.ema.service.TeamUserService;
 import com.itechart.ema.service.UserService;
 import com.itechart.generated.api.TeamsApi;
 import com.itechart.generated.model.RestTeam;
+import com.itechart.generated.model.RestTeamUser;
 import com.itechart.generated.model.RestUser;
 import lombok.AllArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -24,6 +26,7 @@ public class TeamsApiController implements TeamsApi {
 
     private final TeamService teamService;
     private final UserService userService;
+    private final TeamUserService teamUserService;
 
     @Override
     @PreAuthorize("hasAnyAuthority('ADMIN', 'MANAGER')")
@@ -63,6 +66,22 @@ public class TeamsApiController implements TeamsApi {
                                                @PathVariable("teamId") final UUID teamId) {
         var team = teamService.updateTeam(body, teamId);
         return new ResponseEntity<>(team, OK);
+    }
+
+    @Override
+    @PreAuthorize("hasAnyAuthority('ADMIN', 'MANAGER')")
+    public ResponseEntity<RestTeamUser> addUserToTeam(@PathVariable("teamId") final UUID teamId,
+                                                      @PathVariable("userId") final UUID userId) {
+        var teamUser = teamUserService.addUserToTeam(teamId, userId);
+        return new ResponseEntity<>(teamUser, CREATED);
+    }
+
+    @Override
+    @PreAuthorize("hasAnyAuthority('ADMIN', 'MANAGER')")
+    public ResponseEntity<Void> removeUserFromTeam(@PathVariable("teamId") final UUID teamId,
+                                                   @PathVariable("userId") final UUID userId) {
+        teamUserService.removeUserFromTeam(teamId, userId);
+        return new ResponseEntity<>(NO_CONTENT);
     }
 
 }
